# trump-bot

./: API_Test.sh  Cargo.toml  README.md
src/: main.rs
