[package]
name = "trump-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
curl = "0.4.47"
json = "0.12.4"
poise = "0.6.1"
rand = "0.8.5"
reqwest = { version = "0.12.9", features = ["blocking"]}
serenity = "0.12.2"
tokio = { version = "1.41.0", features = ["rt-multi-thread", "macros"] }

